--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,10 @@ serde_json = "1.0"
 anyhow = "1.0"
 tracing = "0.1"
 tracing-subscriber = "0.3"
-tokio = { version = "1", features = ["macros"] }
+tokio = { version = "1", features = ["macros", "full"] }
 discord-sdk = "0.3.6"
 serde = "1.0.203"
+reqwest = { version="0.12", features = ["json"] }
 
 
 [dependencies.windows-sys]
